# SSD-Coursework-Engine

./: .gitmodules  README.md  SprixEngine.csproj  SprixEngine.sln  meson.build  meson_options.txt
src/: TestEP.cs  meson.build
src/IO/: ObjFile.cs  SprixFmt Spec.md  SprixFmt.cs  meson.build
src/UI/: UIAnchor.cs  UIBuilder.cs  UIButton.cs  UICheckbox.cs  UIElement.cs  UILabel.cs  UIPanel.cs  UIPosition.cs  UIRichLabel.cs  UITabs.cs  UITextBox.cs  UIWindow.cs  WinformWrapper.cs  meson.build
src/core/: Task.cs  TaskScheduler.cs  meson.build
src/data/: Bounds.cs  Transform.cs
src/graphics/: Camera.cs  Colour.cs  IVector.cs  Line2D.cs  Matrix.cs  RenderDescriptor.cs  StaticTexture.cs  Texture.cs  Tri.cs  Vector.cs  Vector2.cs  Vector3.cs  Vector4.cs  Vertex.cs  Voxel.cs  meson.build
src/maps/: Brush.cs  Face.cs
src/util/: Threads.cs  meson.build
src/windowing/: FormWrapper.cs  GameWindow.cs  Windower.cs  meson.build
